# MusicServiceLibrary

./: .gitignore  CMakeLists.txt  README.md  input.inp  main.cpp
files/: 0.txt  1.txt  1234.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  output.out
include/: BandMembers.h  ClipList.h  ClipNode.h  MusicClipPtr.h  TestSuite.h
src/: BandMembers.cpp  ClipList.cpp  ClipNode.cpp  MusicClipPtr.cpp  TestSuite.cpp
